calculator page html 구현 - SW

--- a/calculator.html
+++ b/calculator.html
@@ -1,1 +1,45 @@
-test
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>계산기</title>
+        <meta charset = "utf-8" />
+    </head>
+    <body>
+        <table>
+            <tr>
+                <td colspan="4" id = "formula"></td>
+            </tr>
+            <tr>
+                <td colspan="4" id = "result"></td>
+            </tr>
+            <tr>
+                <td>&lt;</td>
+                <td colspan="2" id = "reset">AC</td>
+                <td class = "operator" id="btnDivide">&divide;</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>8</td>
+                <td>9</td>
+                <td class = "operator" id="btnMultiple">&times;</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>5</td>
+                <td>6</td>
+                <td class = "operator" id="btnMinus">-</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>2</td>
+                <td>3</td>
+                <td class = "operator" id="btnPlus">+</td>
+            </tr>
+            <tr>
+                <td colspan="2">0</td>
+                <td>.</td>
+                <td class = "operator" id="btnEqual">=</td>
+            </tr>
+        </table>
+    </body>
+</html>
