--- a/calculator.html
+++ b/calculator.html
@@ -2,43 +2,44 @@
 <html>
     <head>
         <title>계산기</title>
-        <meta charset = "utf-8" />
+        <meta charset="utf-8" />
+        <link rel="stylesheet" href="calculator.css" />
     </head>
     <body>
         <table>
             <tr>
-                <td colspan="4" id = "formula"></td>
+                <td colspan="4" id="formulaDisplay"></td>
             </tr>
             <tr>
-                <td colspan="4" id = "result"></td>
+                <td colspan="4" id="resultDisplay"></td>
             </tr>
             <tr>
-                <td>&lt;</td>
-                <td colspan="2" id = "reset">AC</td>
-                <td class = "operator" id="btnDivide">&divide;</td>
+                <td id="btnBackspace">&lt;</td>
+                <td colspan="2" id="btnReset">AC</td>
+                <td class="operator" id="btnDivide">&divide;</td>
             </tr>
             <tr>
-                <td>7</td>
-                <td>8</td>
-                <td>9</td>
-                <td class = "operator" id="btnMultiple">&times;</td>
+                <td id="btnSeven">7</td>
+                <td id="btnEight">8</td>
+                <td id="btnNine">9</td>
+                <td class="operator" id="btnMultiple">&times;</td>
             </tr>
             <tr>
-                <td>4</td>
-                <td>5</td>
-                <td>6</td>
-                <td class = "operator" id="btnMinus">-</td>
+                <td id="btnFour">4</td>
+                <td id="btnFive">5</td>
+                <td id="btnSix">6</td>
+                <td class="operator" id="btnMinus">-</td>
             </tr>
             <tr>
-                <td>1</td>
-                <td>2</td>
-                <td>3</td>
-                <td class = "operator" id="btnPlus">+</td>
+                <td id="btnOne">1</td>
+                <td id="btnTwo">2</td>
+                <td id="btnThree">3</td>
+                <td class="operator" id="btnPlus">+</td>
             </tr>
             <tr>
-                <td colspan="2">0</td>
-                <td>.</td>
-                <td class = "operator" id="btnEqual">=</td>
+                <td colspan="2" id="btnZero">0</td>
+                <td id="btnDecimalPoint">.</td>
+                <td class="operator" id="btnEqual">=</td>
             </tr>
         </table>
     </body>
