소수점 처리 함수 커밋

--- a/calculator.html
+++ b/calculator.html
@@ -4,7 +4,7 @@
         <title>계산기</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="calculator.css" />
-        <script src = "calculator.js" defer></script>
+        <script src="calculator.js" defer></script>
     </head>
     <body>
         <table>
@@ -15,8 +15,8 @@
                 <td colspan="4" id="resultDisplay"></td>
             </tr>
             <tr>
-                <td id="btnBackspace">&lt;</td>
-                <td colspan="2" id="btnReset">AC</td>
+                <td class="btnErase" id="btnBackspace">&lt;</td>
+                <td colspan="2" class="btnErase" id="btnReset">AC</td>
                 <td class="btnOperator" id="btnDivide">&divide;</td>
             </tr>
             <tr>
