일단 구현함 commit

--- a/calculator.html
+++ b/calculator.html
@@ -9,7 +9,7 @@
     <body>
         <table>
             <tr>
-                <td colspan="4" id="formulaDisplay"></td>
+                <td colspan="4" id="formularDisplay"></td>
             </tr>
             <tr>
                 <td colspan="4" id="resultDisplay"></td>
