리팩토링 커밋

--- a/calculator.html
+++ b/calculator.html
@@ -15,32 +15,32 @@
                 <td colspan="4" id="resultDisplay"></td>
             </tr>
             <tr>
-                <td class="btnErase" id="btnBackspace">&lt;</td>
-                <td colspan="2" class="btnErase" id="btnReset">AC</td>
-                <td class="btnOperator" id="btnDivide">&divide;</td>
+                <td class="btnErase">&lt;</td>
+                <td colspan="2" class="btnErase">AC</td>
+                <td class="btnOperator">&divide;</td>
             </tr>
             <tr>
-                <td class="btnNumber" id="btnSeven">7</td>
-                <td class="btnNumber" id="btnEight">8</td>
-                <td class="btnNumber" id="btnNine">9</td>
-                <td class="btnOperator" id="btnMultiple">&times;</td>
+                <td class="btnNumber">7</td>
+                <td class="btnNumber">8</td>
+                <td class="btnNumber">9</td>
+                <td class="btnOperator">&times;</td>
             </tr>
             <tr>
-                <td class="btnNumber" id="btnFour">4</td>
-                <td class="btnNumber" id="btnFive">5</td>
-                <td class="btnNumber" id="btnSix">6</td>
-                <td class="btnOperator" id="btnMinus">-</td>
+                <td class="btnNumber">4</td>
+                <td class="btnNumber">5</td>
+                <td class="btnNumber">6</td>
+                <td class="btnOperator">-</td>
             </tr>
             <tr>
-                <td class="btnNumber" id="btnOne">1</td>
-                <td class="btnNumber" id="btnTwo">2</td>
-                <td class="btnNumber" id="btnThree">3</td>
-                <td class="btnOperator" id="btnPlus">+</td>
+                <td class="btnNumber">1</td>
+                <td class="btnNumber">2</td>
+                <td class="btnNumber">3</td>
+                <td class="btnOperator">+</td>
             </tr>
             <tr>
-                <td colspan="2" class="btnNumber" id="btnZero">0</td>
+                <td colspan="2" class="btnNumber">0</td>
                 <td id="btnDecimalPoint">.</td>
-                <td class="operator" id="btnEqual">=</td>
+                <td id="btnEqual">=</td>
             </tr>
         </table>
     </body>
